--- a/Communit-Intel-Reporting-System/Communit-Intel-Reporting-System.csproj
+++ b/Communit-Intel-Reporting-System/Communit-Intel-Reporting-System.csproj
@@ -97,24 +97,21 @@
   <ItemGroup>
     <Compile Include="ConsoleApp.cs" />
     <Compile Include="DAL\dalAlert.cs" />
-    <Compile Include="DAL\dallog.cs" />
-    <Compile Include="DAL\dalPerson,cs.cs" />
+    <Compile Include="DAL\dalPerson.cs" />
     <Compile Include="DAL\dalReport.cs" />
-    <Compile Include="DBconnection.cs" />
+    <Compile Include="DAL\DBconnection.cs" />
+    <Compile Include="SystemUI.cs" />
     <Compile Include="models\alert.cs" />
-    <Compile Include="models\LogEntry.cs" />
     <Compile Include="models\person.cs" />
     <Compile Include="models\report.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service Layer\AlertService.cs" />
-    <Compile Include="Service Layer\DBconnection.cs" />
     <Compile Include="Service Layer\PersonService.cs" />
     <Compile Include="Service Layer\ReportService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="Service Layer\ImportService.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
